<resources>
    <string name="app_name">MyAndLab</string>
    <string name="btnFourbtn1">Four Button(p103)</string>
    <string name="btnFourbtn2">Four Button(p103,리니어레이아웃)</string>
    <string name="goSchoolHome">학교 홈페이지 열기</string>
    <string name="calling911">911 응급전화 걸기</string>
    <string name="openPhoto">갤러리 열기</string>
    <string name="back">돌아가기</string>
    <string name="btnCal">심플 계산기(p176,위젯)</string>
    <string name="btnBasicWidget">기본위젯연습(p.185,위젯)</string>
    <string name="androidphone">안드로이드폰</string>
    <string name="iphone">아이폰</string>
    <string name="windowsphone">윈도폰</string>
    <string name="bulb">천정등</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="btnLovelyPet">애완동물 사진보기 앱(p189)</string>
    <string name="rotate">회전하기</string>
    <string name="rotateImage">이미지 회전하기</string>
    <string name="button_made_by_code">코드로 만든 버튼</string>
    <string name="button_datetimebook">날짜시간예약</string>
</resources>